# Changelog
## [2.0.10.16] - 2022-04-05
- fix for bugs in data visualation page
- fixed reordering questions / question editor memory issue
- fixed export for hidden Ego IDs

## [2.0.10.15] - 2022-12-06
- added disabled study option and disabled text page
- fixed issue with cursor not showing in textarea input
- fixed bug with deleting expressions
- updated expressions to load alphabetically
- added saving TExTUAL_PP questions when Back button is pressed
- allows NO_RESPONSE for NETWORK questions

## [2.0.10.14] - 2022-08-26
- fixed variable alter prompts for multiple name generators
- Don't Know and Refusal values added to codebook export
- added new MULTI_GRAPH question type for displaying multiple graphs
- fixed bug with graph loading freezing browser
- fixed issue with spaces in CONTAINS tag

## [2.0.10.13] - 2022-08-18
- added compound expression support to network expressions
- fixed network graph bug
- updated selenium tests to latest version of node with async
- added node display logic

## [2.0.10.12] - 2022-06-22
- aaded hide name generator question option
- added option for auto-loading alters from previous session
- added option for restricting name gen to prev alters
- added option to fill name gen autocomplete with prev alters
- added ability to select previous session question options in network questions

## [2.0.10.11] - 2022-05-25
- added new option for exporting multisession data

## [2.0.10.10] - 2022-05-05
- added set all custom field
- fixes codebook / participant export

## [2.0.10.9] - 2022-04-21
- added interview length column to data procressing
- fixes for merge alter question

## [2.0.10.8] - 2022-04-07
- added Codebook export function to Data processing
- added error for hide Ego ID option
- removed columns in data processing
- fixed export wihout interviews

## [2.0.10.7] - 2022-04-06
- fixed encryption issue when migrating older servers
- updated selenium tests to run headless
- refactored and revised code for clarity
