@@ -14,7 +14,7 @@ Include Response Data<br>
         } else {
             $completed = "INCOMPLETE";
         }
-        echo "<div class='multiRow' style='width:200px;text-align:left'>".Html::checkbox('export[]', false, array('class'=>"export",'value'=>$interview->id, "id"=>"export-$interview->id,")). " " . $interview->egoId."</div>";
+        echo "<div class='multiRow' style='width:200px;text-align:left'>".Html::checkbox('export[]', false, array('class'=>"export",'value'=>$interview->id, "id"=>"export-$interview->id,")). " " .  $egoIds[$interview->id] . "</div>";
         echo "<div class='multiRow' style='width:120px'>".$completed."</div>";
         echo "<div class='multiRow'>".Html::button('Review', array("class"=>"btn btn-xs btn-info",'onclick'=>"document.location='".Url::to('/interview/'.$study->id.'/'.$interview->id . "#/page/0'")))."</div>";
         echo "<br style='clear:both'>";
