@@ -3,6 +3,7 @@
 - fix for bugs in data visualation page
 - fixed reordering questions / question editor memory issue
 - fixed export for hidden Ego IDs
+- improved export interviews load delay
 
 ## [2.0.10.15] - 2022-12-06
 - added disabled study option and disabled text page
